--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==1.11.1
 djangorestframework==3.6.4
 djangorestframework-gis==0.11.2
 djangorestframework-jwt==1.11.0
+drf-nested-routers==0.90.0
 idna==2.5
 packaging==16.8
 psycopg2==2.7.1
