--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,10 @@ appdirs==1.4.3
 certifi==2017.4.17
 chardet==3.0.3
 Django==1.11.1
+django-cors-headers==2.1.0
 djangorestframework==3.6.4
 djangorestframework-gis==0.11.2
 djangorestframework-jwt==1.11.0
-drf-nested-routers==0.90.0
 idna==2.5
 packaging==16.8
 psycopg2==2.7.1
