--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2017.4.17
 chardet==3.0.3
 Django==1.11.1
 django-cors-headers==2.1.0
+django-filter==1.0.4
 djangorestframework==3.6.4
 djangorestframework-gis==0.11.2
 djangorestframework-jwt==1.11.0
